ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-prod-server-bridge
  namespace: sonarqube
spec:
  type: ExternalName
  externalName: argocd-prod-server.argocd
  
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /argocd(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-prod-server-bridge
            port:
              number: 80
